[package]
name = "schedule_reader"
version = "0.1.0"
authors = ["Dennis Marwood <dennismarwood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.18.0", features = ["dates"] }
serde = { version = "1.0.126", features = ["derive"]  }
serde_json = "1.0.75"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"